
next:
          - session cookies: change to sha256 and double hashing
          - api keys: change to sha256 and double hashing
          - fix page reload when changing backends
          - security:
            - validate referer
            - make auth cookie httponly
          - REST:
            - manage api keys via rest api
          - mobile:
            - fix compatibility issue with jquery 3.x

2.28     Fri Mar 29 17:27:48 CET 2019
          - rename graph_proxy option into http_backend_reverse_proxy
          - add `tree` sitepanel for very large setups with many sites
          - add parents to selectable columns
          - add option to store selected backends along with a bookmark
          - add support for dependencies (naemon only)
          - add host alias to exportable columns
          - add eventhandler quick commands
          - fix offset calculation in rest api
          - fix page not found issue when using browser history back
          - fix cross site scripting issues
          - REST:
            - add aggregation function support
            - add cmd to remove all active downtimes for host or service
            - add more external commands
          - Config Tool:
            - add authorization tab to contacts and contactgroups
            - add support for dependencies and escalations
          - Business Process:
            - delay calculation during core reloads
            - add support for http federation
            - add drill down output as default filter
            - fix zooming in chrome
            - disable automatic calculation by setting refresh_interval to zero
            - add read_only mode
            - add `post_refresh_cmd` hook
            - use paging when having many business processes
          - Panorama:
            - add direct link with tabs
            - add theme selector to grafana images
            - add color selector to grafana images
            - add axis color option to speedometer